ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ovidiu
spec:
  tls:
  - hosts:
     - ovidiu.systems
    secretName: ovidiu
  ingressClassName: nginx
  rules:
    - host: ovidiu.systems
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: myservice
                port:
                  number: 80
            path: /
